--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Titolo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aut veritatis tempore voluptas. Autem dicta deleniti enim rerum ratione! Cumque voluptatibus in aut, sit porro nam! Fuga et consectetur vero.</p>
 </body>
 </html>
