--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Titolo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos aut veritatis tempore voluptas. Autem dicta deleniti enim rerum ratione! Cumque voluptatibus in aut, sit porro nam! Fuga et consectetur vero.</p>
+    <img src="images/pexels-photo-30389456.jpeg" alt="foto">
 </body>
 </html>
